[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Color_Fill_2_copy.png" type="Texture" id=1]
[ext_resource path="res://Items/Obelisk_flying.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Adventurefont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sprites/FlyingObelisk_no_lightnings_no_letter.png" type="Texture" id=4]
[ext_resource path="res://Obelisk_particles.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.917647, 0.917647, 0.917647, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=2]

[node name="Obelisk_flying" type="Sprite"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
hframes = 13
frame = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -213.588 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -45.6586
margin_top = -46.7722
margin_right = 47.3414
margin_bottom = 1.22784
custom_fonts/font = ExtResource( 3 )
text = "Rest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
scale = Vector2( 15, 10 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Example2" parent="." instance=ExtResource( 5 )]
position = Vector2( 2.64984, 125.576 )
z_index = -1
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
